bugfix (change jpg to JPG)

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ layout: default
 			<div class="row">
 				<section class="6u">
 					<div class="box post">
-						<a href="#" class="image left"><img src="{{ site.baseurl }}/assets/images/witseminar.jpg" alt="" /></a>
+						<a href="#" class="image left"><img src="{{ site.baseurl }}/assets/images/witseminar.JPG" alt="" /></a>
 						<div class="inner">
 							<h3>定例会の開催（年4回程度）</h3>
 							<p>女性IT技術者養成・キャリア教育に関する最近の動向および意見交換。ゲストスピーカーを招聘し、企業における女性IT技術者支援の取組みについて聞きます。また、人文社会学系専攻の女子大学院生との交流の機会も設けます。なお、広くenPiTに関わっている教員・学生に参加してもらうため、TV会議で行います。</p>
@@ -37,7 +37,7 @@ layout: default
 				</section>
 				<section class="6u">
 					<div class="box post">
-						<a href="#" class="image left"><img src="{{ site.baseurl }}/assets/images/witworkshop.jpg" alt="" /></a>
+						<a href="#" class="image left"><img src="{{ site.baseurl }}/assets/images/witworkshop.JPG" alt="" /></a>
 						<div class="inner">
 							<h3>ワークショップの開催（年１回）</h3>
 							<p>IT技術を身につけることの楽しさ、またキャリアにおける魅力などを女子学生のみならず幅広く伝えるためのワークショップを開催いたします。プログラミングや電子工作などの体験や、ITスキルを活かしたキャリアに関するワークショップなどをこれまで開催しております。
@@ -58,7 +58,7 @@ layout: default
 				</section>
 				<section class="6u">
 					<div class="box post">
-						<a href="#" class="image left"><img src="{{ site.baseurl }}/assets/images/witsummerschool.jpg" alt="" /></a>
+						<a href="#" class="image left"><img src="{{ site.baseurl }}/assets/images/witsummerschool.JPG" alt="" /></a>
 						<div class="inner">
 							<h3>外部組織やイベントへの積極的参加</h3>
 							<p>情報処理学会Info-Workplace委員会との協力や国立女性会館中高生夏の学校への参加など、外部組織やイベントへ積極的に参加いたします。</p>
